# srft

./: CMakeLists.txt  baseline-cufft.cu  baseline-fftw.cpp  common.h  data_fwht-openmp.csv  data_fwht-serial.csv  gpu.cu  job-benchmark  job-fwht-serial  main.cpp  openmp.cpp  scanfiles.py  serial.cpp
